Bug 370162 - Context menu white when right clicking on desktop despite dark theme being enabled.
Summary: Context menu white when right clicking on desktop despite dark theme being en...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Theme packages (other bugs)
Version First Reported In: 5.8.5
Platform: Neon Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL: https://imgur.com/a/I3VFG
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-05 21:07 UTC by swagfortress
Modified: 2018-01-25 09:48 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description swagfortress 2016-10-05 21:07:41 UTC
I just installed KDE Neon and the first thing I did was change the "Look And Feel" (under "Workspace Theme" in System Settings) from Breeze to Breeze Dark. Despite this, the context menu still appears white when clicking on the desktop or the lower panel. Right clicking on an application (Dolphin, for example) brings up the proper dark context menu.

Reproducible: Always

Steps to Reproduce:
1. Go to System Settings> Workspace Theme, and set "Look And Feel" to Breeze Dark.
2. Click apply.
3. Right click on the panel or the desktop.

Actual Results:  
A white context menu with black text appears.

Expected Results:  
A black context menu with white text appears.
Comment 1 Elvis Angelaccio 2017-01-01 10:22:51 UTC
I can reproduce this, even though it happens only after I toggle the color scheme (while it works fine after a new login).

I can also confirm that applications are not affected, only plasmashell's contex menus do not detect the new color scheme.
Comment 2 Kai Uwe Broulik 2017-01-01 16:06:39 UTC
Confirmed. Interesting. Changing colorscheme manually works whereas the look and feel color change is missed by plasmashell.
Comment 3 Kai Uwe Broulik 2017-01-01 16:12:56 UTC
Patch https://phabricator.kde.org/D3908
Comment 4 Patrick Silva 2017-05-26 23:40:49 UTC
I can confirm on Arch, plasma 5.9.5.
When I change from breeze dark to breeze, desktop and panel context menus are still dark until I restart my plasma session.
Comment 5 Christoph Feck 2017-08-02 11:31:22 UTC
What is the status of this bug? From what I know, it is intended that QWidgets (including dialogs and menus) use the QWidget palette, not the Plasma palette.
Comment 6 Patrick Silva 2017-10-15 01:05:20 UTC
This bug affects plasma 5.11 on Arch.
Comment 7 David Edmundson 2017-10-15 08:41:02 UTC
>What is the status of this bug? From what I know, it is intended that QWidgets (including dialogs and menus) use the QWidget palette, not the Plasma palette.

"intended" might be too much of a strong word, but effectively yeah.

However, we have a bug here because in the screensht we can see Dolphin is black. Therefore the widget theme is black.
Comment 8 Patrick Silva 2018-01-23 15:25:37 UTC
plasma 5.12 beta is affected on Arch Linux.
Comment 9 Kai Uwe Broulik 2018-01-25 09:48:52 UTC
Git commit cf49d415e7bb30e98c0e7529e7307d8449b8ffcd by Kai Uwe Broulik.
Committed on 25/01/2018 at 09:47.
Pushed by broulik into branch 'Plasma/5.12'.

[Look and feel KCM] Sync color group after copying over color file values
FIXED-IN: 5.12.0

Differential Revision: https://phabricator.kde.org/D10056

M  +2    -1    kcms/lookandfeel/kcm.cpp

https://commits.kde.org/plasma-desktop/cf49d415e7bb30e98c0e7529e7307d8449b8ffcd