[Look and feel KCM] Sync color group after copying over color file values

BUG: 370162
FIXED-IN: 5.12.0

Differential Revision: https://phabricator.kde.org/D10056